--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,9 +8,10 @@ nav ul {
     justify-content: space-around;
     margin: 0;
     padding: 0;
-    list-style-type: none;
+    overflow: hidden;
     border: 1px solid #fff;
     background-color: #333;
+    list-style-type: none;
 }
 
 nav a {
